switch to mobile styles on nav breakpoint to avoid mission lines overlapping header

--- a/user/themes/cgre/css/main.css
+++ b/user/themes/cgre/css/main.css
@@ -1804,7 +1804,7 @@ body.page-home .staggered-image img {
 .page#mission .body-wrap {
   margin-top: 20px;
 }
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 960px) {
   .page#mission {
     padding-top: 10px;
   }
